--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -105,10 +105,13 @@ body {
 		}
 	}
 
-  p,
   li,
   dl {
     font-size: 1em;
+  }
+
+  p {
+    font-size: 0.9em;
   }
 
   /* paragraph indents */
