--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,9 @@
 <!-- https://t.co/dKP3o1e -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- google console -->
+<meta name="google-site-verification" content="rpw-NnPme43eX0_dYxuvJR11mXu3-P0DX9ZAA6CAq_s" />
+
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
